# blog

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  config.toml  delpoy.sh  hugo.toml  site.config.json  vercel.json
content/: how-ai-company-agent-run-so-long.md  minimax-27-bad-case.md  minimax-mcp-to-skill.md  why-mac-mini-cannot-ping-my-rasperry-pi-hostname-while-my-macbook-can.md  why-openclaw2026.3.2-cannot-exec-bash-tool.md
content/posts/: Config-Center-With-k8s  My Linux.md  Translate-How-and-what-university-learn-through-online.md  Working-with-Errors-in-Go-1.13.md  anno.md  gamer-agent.md  go-socket-io-源码分析.md  new-start.md  quant-know-how-and-why.md  stack-rpc里的registry.md  zeit.md
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: head.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/posts/: index.html  index.xml
public/posts/my-linux/: index.html
public/posts/mylinux/: index.html
public/posts/new-start/: index.html
public/posts/zeit/: index.html
public/tags/: index.html  index.xml
public/tags/blog/: index.html  index.xml
public/tags/golang/: index.html  index.xml
public/tags/hugo/: index.html  index.xml
public/tags/linux/: index.html  index.xml
public/tags/neovim/: index.html  index.xml
public/tags/now/: index.html  index.xml
public/tags/oh-my-zsh/: index.html  index.xml
public/tags/spacevim/: index.html  index.xml
public/tags/ssh/: index.html  index.xml
src/: main.rs
themes/mytheme/: theme.toml
(+14 files in other folders)
